# Digit_recognition_Ziffererkennung

./: .gitlab-ci.yml  README.md
Doxygen_Html and Latex/html/: _u_i_8cpp.html  _u_i_8h.html  _u_i_8h_source.html  annotated.html  class_layer-members.html  class_layer.html  class_network-members.html  class_network.html  class_reader-members.html  class_reader.html  class_u_i-members.html  class_u_i.html  classes.html  classparallel-members.html  classparallel.html  classsimd-members.html  classsimd.html  classsimd__and__parallel-members.html  classsimd__and__parallel.html  classsisd-members.html  classsisd.html  classuni__test-members.html  classuni__test.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  layer_8cpp.html  layer_8h.html  layer_8h_source.html  main_8cpp.html  menudata.js  network_8cpp.html  network_8h.html  network_8h_source.html  (+19 more)
Doxygen_Html and Latex/latex/: _u_i_8cpp.tex  _u_i_8h.tex  _u_i_8h_source.tex  annotated.tex  class_layer.tex  class_network.eps  class_network.tex  class_reader.tex  class_u_i.tex  classparallel.eps  (+38 more)
LaTeX File/: Mikroprozessor_Projekt_Arbeit.latex
Project/: CMakeLists.txt  UI.cpp  UI.h  layer.cpp  layer.h  main.cpp  network.cpp  network.h  parallel.cpp  parallel.h  reader.h  simd.cpp  simd.h  simd_and_parallel.cpp  simd_and_parallel.h  sisd.cpp  sisd.h
XOR-Problem/: layer.h  main.cpp  network.h  reader.h
duration of the learning process/: parallel_time.txt  simd_parallel_time.txt  simd_time.txt  sisd_time.txt
(+42 files in other folders)
